Bug 415676 - Dolphin crashes after trying to rename "Trash can" name
Summary: Dolphin crashes after trying to rename "Trash can" name
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kio
Classification: Frameworks and Libraries
Component: Places (other bugs)
Version First Reported In: 5.65.0
Platform: Fedora RPMs Linux
: NOR crash
Target Milestone: ---
Assignee: David Faure
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2019-12-29 14:58 UTC by ElXreno
Modified: 2019-12-29 18:24 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.66
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description ElXreno 2019-12-29 14:58:29 UTC
Application: dolphin (19.08.2)

Qt Version: 5.12.5
Frameworks Version: 5.64.0
Operating System: Linux 5.3.16-300.fc31.x86_64 x86_64
Distribution: Fedora 31 (KDE Plasma)

-- Information about the crash:
- What I was doing when the application crashed:

Just try to change "Trash can" name to something another. Before it I renamed elements successfully.

-- Backtrace:
Application: Dolphin (dolphin), signal: Segmentation fault
Using host libthread_db library "/lib64/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f9a14ff9880 (LWP 69549))]

Thread 4 (Thread 0x7f99fd1d3700 (LWP 69631)):
#0  0x00007f9a1b8c844c in read () from /lib64/libc.so.6
#1  0x00007f9a17045365 in pa_read () from /usr/lib64/pulseaudio/libpulsecommon-13.0.so
#2  0x00007f9a17ff43d6 in pa_mainloop_prepare () from /lib64/libpulse.so.0
#3  0x00007f9a17ff4e74 in pa_mainloop_iterate () from /lib64/libpulse.so.0
#4  0x00007f9a17ff4f30 in pa_mainloop_run () from /lib64/libpulse.so.0
#5  0x00007f9a180030dd in thread () from /lib64/libpulse.so.0
#6  0x00007f9a17073b9c in internal_thread_func () from /usr/lib64/pulseaudio/libpulsecommon-13.0.so
#7  0x00007f9a180464e2 in start_thread () from /lib64/libpthread.so.0
#8  0x00007f9a1b8d7693 in clone () from /lib64/libc.so.6

Thread 3 (Thread 0x7f9a04fe0700 (LWP 69553)):
#0  0x00007f9a176c78b0 in g_source_iter_next () from /lib64/libglib-2.0.so.0
#1  0x00007f9a176c8c53 in g_main_context_prepare () from /lib64/libglib-2.0.so.0
#2  0x00007f9a176c96cb in g_main_context_iterate.isra () from /lib64/libglib-2.0.so.0
#3  0x00007f9a176c98d3 in g_main_context_iteration () from /lib64/libglib-2.0.so.0
#4  0x00007f9a19849da3 in QEventDispatcherGlib::processEvents (this=0x7f99f4000b60, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#5  0x00007f9a197f3cfb in QEventLoop::exec (this=this@entry=0x7f9a04fdfd20, flags=..., flags@entry=...) at ../../include/QtCore/../../src/corelib/global/qflags.h:140
#6  0x00007f9a1964c3a5 in QThread::exec (this=<optimized out>) at ../../include/QtCore/../../src/corelib/global/qflags.h:120
#7  0x00007f9a1964d4f6 in QThreadPrivate::start (arg=0x55864853e2c0) at thread/qthread_unix.cpp:361
#8  0x00007f9a180464e2 in start_thread () from /lib64/libpthread.so.0
#9  0x00007f9a1b8d7693 in clone () from /lib64/libc.so.6

Thread 2 (Thread 0x7f9a070fe700 (LWP 69552)):
#0  0x00007f9a1b8c844c in read () from /lib64/libc.so.6
#1  0x00007f9a177114cf in g_wakeup_acknowledge () from /lib64/libglib-2.0.so.0
#2  0x00007f9a176c92e7 in g_main_context_check () from /lib64/libglib-2.0.so.0
#3  0x00007f9a176c9742 in g_main_context_iterate.isra () from /lib64/libglib-2.0.so.0
#4  0x00007f9a176c98d3 in g_main_context_iteration () from /lib64/libglib-2.0.so.0
#5  0x00007f9a19849da3 in QEventDispatcherGlib::processEvents (this=0x7f99f8000b60, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#6  0x00007f9a197f3cfb in QEventLoop::exec (this=this@entry=0x7f9a070fdcf0, flags=..., flags@entry=...) at ../../include/QtCore/../../src/corelib/global/qflags.h:140
#7  0x00007f9a1964c3a5 in QThread::exec (this=this@entry=0x7f9a19b49060 <(anonymous namespace)::Q_QGS__q_manager::innerFunction()::holder>) at ../../include/QtCore/../../src/corelib/global/qflags.h:120
#8  0x00007f9a19ac5f4a in QDBusConnectionManager::run (this=0x7f9a19b49060 <(anonymous namespace)::Q_QGS__q_manager::innerFunction()::holder>) at qdbusconnection.cpp:178
#9  0x00007f9a1964d4f6 in QThreadPrivate::start (arg=0x7f9a19b49060 <(anonymous namespace)::Q_QGS__q_manager::innerFunction()::holder>) at thread/qthread_unix.cpp:361
#10 0x00007f9a180464e2 in start_thread () from /lib64/libpthread.so.0
#11 0x00007f9a1b8d7693 in clone () from /lib64/libc.so.6

Thread 1 (Thread 0x7f9a14ff9880 (LWP 69549)):
[KCrash Handler]
#6  KIconButton::icon (this=0x0) at /usr/src/debug/kf5-kiconthemes-5.64.0-1.fc31.x86_64/src/kiconbutton.cpp:157
#7  0x00007f9a1b625b92 in KFilePlaceEditDialog::icon (this=<optimized out>) at /usr/src/debug/kf5-kio-5.64.0-1.fc31.x86_64/src/filewidgets/kfileplaceeditdialog.cpp:199
#8  0x00007f9a1ba0c53e in PlacesPanel::editEntry (this=0x558648208f00, index=6) at /usr/include/c++/9/bits/atomic_base.h:413
#9  0x00007f9a1ba0d9e8 in PlacesPanel::slotItemContextMenuRequested (this=0x558648208f00, index=<optimized out>, pos=...) at /usr/src/debug/dolphin-19.08.2-2.fc31.x86_64/src/panels/places/placespanel.cpp:256
#10 0x00007f9a1981f010 in QtPrivate::QSlotObjectBase::call (a=0x7ffc56d47960, r=0x558648208f00, this=0x5586485f9f50) at ../../include/QtCore/../../src/corelib/kernel/qobjectdefs_impl.h:394
#11 QMetaObject::activate (sender=0x5586485fbe30, signalOffset=<optimized out>, local_signal_index=<optimized out>, argv=<optimized out>) at kernel/qobject.cpp:3783
#12 0x00007f9a1b6fa28a in KItemListController::itemContextMenuRequested (this=this@entry=0x5586485fbe30, _t1=<optimized out>, _t2=...) at /usr/src/debug/dolphin-19.08.2-2.fc31.x86_64/x86_64-redhat-linux-gnu/src/dolphinprivate_autogen/Z3MQH7AOBD/moc_kitemlistcontroller.cpp:453
#13 0x00007f9a1b72ace4 in KItemListController::mousePressEvent (transform=..., event=0x7ffc56d482d0, this=0x5586485fbe30) at /usr/include/qt5/QtCore/qpoint.h:131
#14 KItemListController::mousePressEvent (this=0x5586485fbe30, event=0x7ffc56d482d0, transform=...) at /usr/src/debug/dolphin-19.08.2-2.fc31.x86_64/src/kitemviews/kitemlistcontroller.cpp:531
#15 0x00007f9a1b72d485 in KItemListController::processEvent (this=this@entry=0x5586485fbe30, event=event@entry=0x7ffc56d482d0, transform=...) at /usr/src/debug/dolphin-19.08.2-2.fc31.x86_64/src/kitemviews/kitemlistcontroller.cpp:1051
#16 0x00007f9a1b73cbf6 in KItemListView::event (this=0x55864812a370, event=0x7ffc56d482d0) at /usr/src/debug/dolphin-19.08.2-2.fc31.x86_64/src/kitemviews/kitemlistview.cpp:919
#17 0x00007f9a1a233ad6 in QApplicationPrivate::notify_helper (this=<optimized out>, receiver=0x55864812a370, e=0x7ffc56d482d0) at kernel/qapplication.cpp:3700
#18 0x00007f9a1a23d150 in QApplication::notify(QObject*, QEvent*) () at kernel/qapplication.cpp:3446
#19 0x00007f9a197f4df8 in QCoreApplication::notifyInternal2 (receiver=0x55864812a370, event=0x7ffc56d482d0) at kernel/qcoreapplication.cpp:1088
#20 0x00007f9a1a55e183 in QGraphicsScenePrivate::sendEvent (this=<optimized out>, event=0x7ffc56d482d0, item=0x55864812a380) at graphicsview/qgraphicsscene.cpp:1246
#21 QGraphicsScenePrivate::sendEvent (this=<optimized out>, item=0x55864812a380, event=0x7ffc56d482d0) at graphicsview/qgraphicsscene.cpp:1226
#22 0x00007f9a1a55e5c7 in QGraphicsScenePrivate::sendMouseEvent (this=this@entry=0x7f99f8011e70, mouseEvent=mouseEvent@entry=0x7ffc56d482d0) at graphicsview/qgraphicsscene.cpp:1327
#23 0x00007f9a1a566a7b in QGraphicsScenePrivate::mousePressEventHandler (this=this@entry=0x7f99f8011e70, mouseEvent=mouseEvent@entry=0x7ffc56d482d0) at graphicsview/qgraphicsscene.cpp:1454
#24 0x00007f9a1a566caf in QGraphicsScene::mousePressEvent (this=<optimized out>, mouseEvent=0x7ffc56d482d0) at graphicsview/qgraphicsscene.cpp:4049
#25 0x00007f9a1a57022a in QGraphicsScene::event (this=0x558648600b20, event=0x7ffc56d482d0) at graphicsview/qgraphicsscene.cpp:3413
#26 0x00007f9a1a233ad6 in QApplicationPrivate::notify_helper (this=<optimized out>, receiver=0x558648600b20, e=0x7ffc56d482d0) at kernel/qapplication.cpp:3700
#27 0x00007f9a1a23d150 in QApplication::notify(QObject*, QEvent*) () at kernel/qapplication.cpp:3446
#28 0x00007f9a197f4df8 in QCoreApplication::notifyInternal2 (receiver=0x558648600b20, event=0x7ffc56d482d0) at kernel/qcoreapplication.cpp:1088
#29 0x00007f9a1a58d1db in QGraphicsView::mousePressEvent (this=0x558648607ba0, event=0x7ffc56d488e0) at /usr/include/c++/9/bits/atomic_base.h:413
#30 0x00007f9a1a276dac in QWidget::event (this=this@entry=0x558648607ba0, event=event@entry=0x7ffc56d488e0) at kernel/qwidget.cpp:8943
#31 0x00007f9a1a323942 in QFrame::event (this=0x558648607ba0, e=0x7ffc56d488e0) at widgets/qframe.cpp:550
#32 0x00007f9a1a58e3d1 in QGraphicsView::viewportEvent (this=0x558648607ba0, event=0x7ffc56d488e0) at graphicsview/qgraphicsview.cpp:2969
#33 0x00007f9a197f4c3e in QCoreApplicationPrivate::sendThroughObjectEventFilters (event=<optimized out>, receiver=<optimized out>) at kernel/qcoreapplication.cpp:1214
#34 QCoreApplicationPrivate::sendThroughObjectEventFilters (receiver=receiver@entry=0x558648602cf0, event=event@entry=0x7ffc56d488e0) at kernel/qcoreapplication.cpp:1203
#35 0x00007f9a1a233ac5 in QApplicationPrivate::notify_helper (this=<optimized out>, receiver=0x558648602cf0, e=0x7ffc56d488e0) at kernel/qapplication.cpp:3694
#36 0x00007f9a1a23d3a3 in QApplication::notify(QObject*, QEvent*) () at kernel/qapplication.cpp:3160
#37 0x00007f9a197f4df8 in QCoreApplication::notifyInternal2 (receiver=0x558648602cf0, event=0x7ffc56d488e0) at kernel/qcoreapplication.cpp:1088
#38 0x00007f9a1a23c4b7 in QApplicationPrivate::sendMouseEvent (receiver=0x558648602cf0, event=0x7ffc56d488e0, alienWidget=0x558648602cf0, nativeWidget=0x558648092bd0, buttonDown=<optimized out>, lastMouseReceiver=..., spontaneous=true, onlyDispatchEnterLeave=false) at kernel/qapplication.cpp:2646
#39 0x00007f9a1a2920dd in QWidgetWindow::handleMouseEvent(QMouseEvent*) () at /usr/include/c++/9/bits/atomic_base.h:413
#40 0x00007f9a1a294f6c in QWidgetWindow::event (this=0x558648262260, event=0x7ffc56d48d50) at kernel/qwidgetwindow.cpp:281
#41 0x00007f9a1a233ad6 in QApplicationPrivate::notify_helper (this=<optimized out>, receiver=0x558648262260, e=0x7ffc56d48d50) at kernel/qapplication.cpp:3700
#42 0x00007f9a1a23d150 in QApplication::notify(QObject*, QEvent*) () at kernel/qapplication.cpp:3446
#43 0x00007f9a197f4df8 in QCoreApplication::notifyInternal2 (receiver=0x558648262260, event=0x7ffc56d48d50) at kernel/qcoreapplication.cpp:1088
#44 0x00007f9a19ca0c43 in QGuiApplicationPrivate::processMouseEvent (e=e@entry=0x558648f1e620) at kernel/qguiapplication.cpp:2114
#45 0x00007f9a19ca246b in QGuiApplicationPrivate::processWindowSystemEvent (e=0x558648f1e620) at kernel/qguiapplication.cpp:1849
#46 0x00007f9a19c7e56b in QWindowSystemInterface::sendWindowSystemEvents (flags=flags@entry=...) at kernel/qwindowsysteminterface.cpp:1151
#47 0x00007f9a07ed0b5e in xcbSourceDispatch (source=<optimized out>) at qxcbeventdispatcher.cpp:105
#48 0x00007f9a176c94a0 in g_main_context_dispatch () from /lib64/libglib-2.0.so.0
#49 0x00007f9a176c9830 in g_main_context_iterate.isra () from /lib64/libglib-2.0.so.0
#50 0x00007f9a176c98d3 in g_main_context_iteration () from /lib64/libglib-2.0.so.0
#51 0x00007f9a19849d85 in QEventDispatcherGlib::processEvents (this=0x55864800eb00, flags=...) at kernel/qeventdispatcher_glib.cpp:422
#52 0x00007f9a197f3cfb in QEventLoop::exec (this=this@entry=0x7ffc56d490f0, flags=..., flags@entry=...) at ../../include/QtCore/../../src/corelib/global/qflags.h:140
#53 0x00007f9a197fba26 in QCoreApplication::exec () at ../../include/QtCore/../../src/corelib/global/qflags.h:120
#54 0x00007f9a19c965d0 in QGuiApplication::exec () at kernel/qguiapplication.cpp:1791
#55 0x00007f9a1a233a49 in QApplication::exec () at kernel/qapplication.cpp:2856
#56 0x00007f9a1b9e950a in kdemain (argc=<optimized out>, argv=<optimized out>) at /usr/src/debug/dolphin-19.08.2-2.fc31.x86_64/src/main.cpp:183
#57 0x00007f9a1b7fd1a3 in __libc_start_main () from /lib64/libc.so.6
#58 0x0000558647c0d0ae in _start ()
[Inferior 1 (process 69549) detached]

Reported using DrKonqi
Comment 1 Elvis Angelaccio 2019-12-29 18:24:42 UTC
Git commit a9ea007cf87ca91a2641761b211c96adc91a959c by Elvis Angelaccio.
Committed on 29/12/2019 at 18:07.
Pushed by elvisangelaccio into branch 'master'.

KFilePlaceEditDialog: fix crash when editing the Trash place

Summary:
`m_iconButton` is initialized only when the url scheme of the place being
edited is not `trash`.
FIXED-IN: 5.66

Test Plan: Right-click the Trash place in dolphin and change the name.

Reviewers: #frameworks

Subscribers: kde-frameworks-devel

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D26276

M  +4    -0    src/filewidgets/kfileplaceeditdialog.cpp

https://commits.kde.org/kio/a9ea007cf87ca91a2641761b211c96adc91a959c