KFilePlaceEditDialog: fix crash when editing the Trash place

Summary:
`m_iconButton` is initialized only when the url scheme of the place being
edited is not `trash`.

BUG: 415676
FIXED-IN: 5.66

Test Plan: Right-click the Trash place in dolphin and change the name.

Reviewers: #frameworks

Subscribers: kde-frameworks-devel

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D26276